--- a/Adviser/Adviser-Dashboard_Page/dashboard-page.html
+++ b/Adviser/Adviser-Dashboard_Page/dashboard-page.html
@@ -84,7 +84,7 @@
                         </div>
                     </a>
 
-                    <a href="#">
+                    <a href="../Adviser-Evaluation_Page/evaluationform2-page.html">
                         <div class="submenu-cell">
                             <div class="form-1">
                                 <i class="ph-bold ph-file-text"></i>
@@ -93,7 +93,7 @@
                         </div>
                     </a>
 
-                    <a href="#">
+                    <a href="../Adviser-Evaluation_Page/evaluationform3-page.html">
                         <div class="submenu-cell">
                             <div class="form-1">
                                 <i class="ph-bold ph-file-text"></i>
