--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <div class="profile-section">
             <div class="profile-pic">
-                <img src="../../../Images/profile.jpg">
+                <img src="./Images/profile.jpg">
             </div>
             <div class="profile-details">
                 <p id="profile-name">Jhon Denard Firme</p>
@@ -36,7 +36,7 @@
 
         <div class="dashboard-section" >
 
-            <a href="dashboard-page.html">
+            <a href="./Adviser/Adviser-Dashboard_Page/dashboard-page.html">
                 <div class="dashboard-cell active">
                     <div class="dashboard">
                         <i class="ph-bold ph-house-simple"></i>
@@ -45,7 +45,7 @@
                 </div>
             </a>
 
-            <a href="../Adviser-Student_Page/student-page.html">
+            <a href="./Adviser/Adviser-Student_Page/student-page.html">
             <div class="dashboard-cell">
                 <div class="student">
                     <i class="ph-bold ph-user"></i>
@@ -54,7 +54,7 @@
             </div>
             </a>
 
-            <a href="../Adviser-Analytics_Page/analytics-page.html">
+            <a href="./Adviser/Adviser-Analytics_Page/analytics-page.html">
             <div class="dashboard-cell">
                 <div class="analytics">
                     <i class="ph-bold ph-chart-bar"></i>
@@ -75,7 +75,7 @@
 
             
             <div class="dashboard-submenu">
-                    <a href="../Adviser-Evaluation_Page/evaluationform1-page.html">
+                    <a href="./Adviser/Adviser-Evaluation_Page/evaluationform1-page.html">
                         <div class="submenu-cell">
                             <div class="form-1">
                                 <i class="ph-bold ph-file-text"></i>
@@ -84,7 +84,7 @@
                         </div>
                     </a>
 
-                    <a href="#">
+                    <a href="./Adviser/Adviser-Evaluation_Page/evaluationform2-page.html">
                         <div class="submenu-cell">
                             <div class="form-1">
                                 <i class="ph-bold ph-file-text"></i>
@@ -93,7 +93,7 @@
                         </div>
                     </a>
 
-                    <a href="#">
+                    <a href="./Adviser/Adviser-Evaluation_Page/evaluationform3-page.html">
                         <div class="submenu-cell">
                             <div class="form-1">
                                 <i class="ph-bold ph-file-text"></i>
