--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="dashboard-page.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -218,7 +218,7 @@
 
                 <div class="record-profile">
                     <div class="record-pic">
-                        <img src="../../Images/profile.jpg"></i>
+                        <img src="./Images/profile.jpg"></i>
                     </div>
                     <div class="record-name">
                         <p class="record-text">Jhon Denard Firme</p>
@@ -254,7 +254,7 @@
 
             <div class="record-profile">
                 <div class="record-pic">
-                    <img src="../../Images/profile.jpg"></i>
+                    <img src="./Images/profile.jpg"></i>
                 </div>
                 <div class="record-name">
                     <p class="record-text">Jhon Denard Firme</p>
@@ -290,7 +290,7 @@
 
         <div class="record-profile">
             <div class="record-pic">
-                <img src="../../Images/profile.jpg"></i>
+                <img src="./Images/profile.jpg"></i>
             </div>
             <div class="record-name">
                 <p class="record-text">Jhon Denard Firme</p>
@@ -325,7 +325,7 @@
 
     <div class="record-profile">
         <div class="record-pic">
-            <img src="../../Images/profile.jpg"></i>
+            <img src="./Images/profile.jpg"></i>
         </div>
         <div class="record-name">
             <p class="record-text">Jhon Denard Firme</p>
@@ -361,7 +361,7 @@
 
     <div class="record-profile">
         <div class="record-pic">
-            <img src="../../Images/profile.jpg"></i>
+            <img src="./Images/profile.jpg"></i>
         </div>
         <div class="record-name">
             <p class="record-text">Jhon Denard Firme</p>
@@ -398,7 +398,7 @@
 
     <div class="record-profile">
         <div class="record-pic">
-            <img src="../../Images/profile.jpg"></i>
+            <img src="./Images/profile.jpg"></i>
         </div>
         <div class="record-name">
             <p class="record-text">Jhon Denard Firme</p>
@@ -434,7 +434,7 @@
 
     <div class="record-profile">
         <div class="record-pic">
-            <img src="../../Images/profile.jpg"></i>
+            <img src="./Images/profile.jpg"></i>
         </div>
         <div class="record-name">
             <p class="record-text">Jhon Denard Firme</p>
@@ -470,7 +470,7 @@
 
     <div class="record-profile">
         <div class="record-pic">
-            <img src="../../Images/profile.jpg"></i>
+            <img src="./Images/profile.jpg"></i>
         </div>
         <div class="record-name">
             <p class="record-text">Jhon Denard Firme</p>
@@ -506,7 +506,7 @@
 
     <div class="record-profile">
         <div class="record-pic">
-            <img src="../../Images/profile.jpg"></i>
+            <img src="./Images/profile.jpg"></i>
         </div>
         <div class="record-name">
             <p class="record-text">Jhon Denard Firme</p>
