--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EvalRate</title>
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,7 +34,7 @@
 
 
             <div class="button-links">
-                <a href="#">
+                <a href="./Login/Student-Login/student-login.html">
                     <button>
                         STUDENT
                     </button>
@@ -46,7 +46,7 @@
                     </button>
                 </a>
 
-                <a href="#">
+                <a href="./Adviser/Adviser-Dashboard_Page/dashboard-page.html">
                     <button>
                         FACULTY
                     </button>
